--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                             <h4>Emergency contact number:1234567899</h4>
                         </div>
                         <div class="col-12 col-md-4 mt-4 mt-md-0 text-center text md-end">
-                            all ringhts to RAG
+                            all rights to RAG
                         </div>
                     </div>
 
